* Temporarily reduce controls to clear only...

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Helmets",
-    "author": "Microsoft",
+    "name": "Wearables",
+    "author": "Cause",
     "optionalPermissions": ["user-interaction"]
 }
