--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wear-a-helmet",
+  "name": "wearables",
   "version": "0.2.0",
   "private": true,
   "description": "",
@@ -31,6 +31,7 @@
     "debug-watch": "npm run build-only && concurrently \"npm run build-watch\" \"nodemon --nolazy --inspect=9229 .\""
   },
   "devDependencies": {
+    "@types/node": "^10.17.50",
     "@typescript-eslint/eslint-plugin": "^2.17.0",
     "@typescript-eslint/parser": "^2.17.0",
     "eslint": "^6.8.0",
@@ -39,10 +40,9 @@
   "dependencies": {
     "@microsoft/mixed-reality-extension-sdk": "^0.20.0",
     "@types/dotenv": "^6.1.0",
-    "@types/node": "^10.3.1",
     "concurrently": "^5.1.0",
     "dotenv": "^6.2.0",
-    "node-fetch": "^2.6.0",
+    "node-fetch": "^2.6.1",
     "typescript": "^3.7.5"
   }
 }
